# cheshire

./: .gitignore  MANIFEST.in  Makefile  PUBLISHING.md  README.md  b1.ans  b2.ans  c1.ans  c3.ans  cheshire.py  cheshire.yaml  chs.ans  compile_app.py  database_analyzer.py  db_connectors.py  demo.duckdb  dev.sh  example.duckdb  examples.sh  map_renderer.py  pie_chart.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_data.parquet  setup.py  test_data.csv  test_data.tsv  test_geo.db  tui_mode.py
.github/workflows/: python-app.yml
cheshire/: __init__.py  database_analyzer.py  db_connectors.py  logo.ans  logo2.ans  main.py  map_renderer.py  matrix_heatmap.py  tui_mode.py  waffle_chart.py
parquet_folder/: month_1.parquet  month_2.parquet  month_3.parquet  offense_codes.parquet  sqlite_to_parquet.py  us_counties.parquet  us_states.parquet  us_zipcodes.parquet
test_venv/: pyvenv.cfg
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_data_processing.py  test_dimensions.py  test_json_input.py  test_visualization.py
